Restructured to make GUI components generic grid plotting components

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,17 @@
             <version>1.8.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -70,7 +81,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        info.thebloodbank.gameoflife.gui.GameOfLifeVisualization
+                                        info.thebloodbank.gameoflife.gui.GameOfLifeApplication
                                     </mainClass>
                                 </manifest>
                             </archive>
